--- a/index.html
+++ b/index.html
@@ -574,11 +574,11 @@
                 <span>工具箱</span>
                 <i class="fas fa-chevron-down submenu-icon"></i>
                 <ul class="submenu" role="menu">
-                    <li role="none"><a class="submenu-item" href="#quzhong" data-section="quzhong" data-type="iframe" role="menuitem" tabindex="-1" aria-label="字符去重工具">🟆 字符去重</a></li>
-                    <li role="none"><a class="submenu-item" href="#duibi" data-section="duibi" data-type="iframe" role="menuitem" tabindex="-1" aria-label="文本对比工具">🟆 文本对比</a></li>
-                    <li role="none"><a class="submenu-item" href="#pinyin" data-section="pinyin" data-type="iframe" role="menuitem" tabindex="-1" aria-label="汉字拼音转换工具">🟆 汉字拼音转换</a></li>
-                    <li role="none"><a class="submenu-item" href="#xingjinzi" data-section="xingjinzi" data-type="iframe" role="menuitem" tabindex="-1" aria-label="形近字查询工具">🟆 形近字查询</a></li>
-                    <li role="none"><a class="submenu-item" href="#shufafengge" data-section="shufafengge" data-type="iframe" role="menuitem" tabindex="-1" aria-label="书法风格工具">🟆 书法风格</a></li>
+                    <li role="none"><a class="submenu-item" href="#quzhong" data-section="quzhong" data-type="iframe" role="menuitem" tabindex="-1" aria-label="字符去重工具">• 字符去重</a></li>
+                    <li role="none"><a class="submenu-item" href="#duibi" data-section="duibi" data-type="iframe" role="menuitem" tabindex="-1" aria-label="文本对比工具">• 文本对比</a></li>
+                    <li role="none"><a class="submenu-item" href="#pinyin" data-section="pinyin" data-type="iframe" role="menuitem" tabindex="-1" aria-label="汉字拼音转换工具">• 汉字拼音转换</a></li>
+                    <li role="none"><a class="submenu-item" href="#xingjinzi" data-section="xingjinzi" data-type="iframe" role="menuitem" tabindex="-1" aria-label="形近字查询工具">• 形近字查询</a></li>
+                    <li role="none"><a class="submenu-item" href="#shufafengge" data-section="shufafengge" data-type="iframe" role="menuitem" tabindex="-1" aria-label="书法风格工具">• 书法风格</a></li>
                 </ul>
             </li>
 
