--- a/index.html
+++ b/index.html
@@ -476,11 +476,12 @@
                 <li>
                     <a href="#" data-page="tools" class="dropdown-parent-link"><span class="dot"></span><span>Web工具<i class="fa-solid fa-chevron-down dropdown-arrow"></i></span></a>
                     <ul class="dropdown">
-                        <li><a href="#quzhong" data-page="quzhong"><span class="dot"></span>字符去重</a></li>
+                        <li><a href="#txt" data-page="txt"><span class="dot"></span>在线TXT编辑</a></li>
+                        <li><a href="#quchong" data-page="quzhong"><span class="dot"></span>字符去重</a></li>
                         <li><a href="#duibi" data-page="duibi"><span class="dot"></span>文本对比</a></li>
                         <li><a href="#pinyin" data-page="pinyin"><span class="dot"></span>汉字拼音转换</a></li>
-                        <li><a href="#xingjinzi" data-page="xingjinzi"><span class="dot"></span>形近字查询</a></li>
-                        <li><a href="#shufafengge" data-page="shufafengge"><span class="dot"></span>书法风格</a></li>
+                        <li><a href="#xinjinzi" data-page="xingjinzi"><span class="dot"></span>形近字查询</a></li>
+                        <li><a href="#shufa" data-page="shufa"><span class="dot"></span>书法风格</a></li>
                     </ul>
                 </li>
 
@@ -512,20 +513,23 @@
         <div id="wrapper-bao" class="iframe-wrapper" data-top-page="bao">
             <iframe data-src="https://zizaotop.feishu.cn/share/base/query/shrcn0Ka5zIo6q8TCHmstW2OS6c"></iframe>
         </div>
+        <div id="wrapper-txt" class="iframe-wrapper" data-top-page="tools">
+            <iframe data-src="https://www.zizao.top/pages/toolbox/#txt"></iframe>
+        </div>
         <div id="wrapper-quchong" class="iframe-wrapper" data-top-page="tools">
-            <iframe data-src="pages/toolbox/index.html"></iframe>
+            <iframe data-src="https://www.zizao.top/pages/toolbox/#quchong"></iframe>
         </div>
         <div id="wrapper-duibi" class="iframe-wrapper" data-top-page="tools">
-            <iframe data-src="pages/toolbox/2.html"></iframe>
+            <iframe data-src="https://www.zizao.top/pages/toolbox/#duibi"></iframe>
         </div>
         <div id="wrapper-pinyin" class="iframe-wrapper" data-top-page="tools">
-            <iframe data-src="pages/toolbox/3.html"></iframe>
+            <iframe data-src="https://www.zizao.top/pages/toolbox/#pinyin"></iframe>
         </div>
-        <div id="wrapper-xingjinzi" class="iframe-wrapper" data-top-page="tools">
-            <iframe data-src="pages/toolbox/4.html"></iframe>
+        <div id="wrapper-xinjinzi" class="iframe-wrapper" data-top-page="tools">
+            <iframe data-src="https://www.zizao.top/pages/toolbox/#xinjinzi"></iframe>
         </div>
-        <div id="wrapper-shufafengge" class="iframe-wrapper" data-top-page="tools">
-            <iframe data-src="pages/toolbox/write/index.html"></iframe>
+        <div id="wrapper-shufa" class="iframe-wrapper" data-top-page="tools">
+            <iframe data-src="https://www.zizao.top/pages/toolbox/#shufa"></iframe>
         </div>
     </div>
 
@@ -539,12 +543,12 @@
             'home': { url: 'pages/home/index.html', title: '字造 - 专注分享字体领域优质内容', topPage: 'home' },
             'hao': { url: 'pages/hao/index.html', title: '字造导航 - 设计师的私藏灵感库', topPage: 'hao' },
             'bao': { url: 'https://zizaotop.feishu.cn/share/base/query/shrcn0Ka5zIo6q8TCHmstW2OS6c', title: '字造百宝库 - 设计师的资源百宝库', topPage: 'bao' },
-            'quchong': { url: 'https://www.zizao.top/pages/toolbox/index.html#txt', title: '在线TXT文本编辑器 - 字造ZIZAO', topPage: 'tools' },
-            'quchong': { url: 'https://www.zizao.top/pages/toolbox/index.html#quchong', title: '文本字符去重工具 - 字造ZIZAO', topPage: 'tools' },
-            'duibi': { url: 'https://www.zizao.top/pages/toolbox/index.html#duibi', title: '文字字符对比工具 - 字造ZIZAO', topPage: 'tools' },
-            'pinyin': { url: 'https://www.zizao.top/pages/toolbox/index.html#pinyin', title: '汉字拼音转换工具 - 字造ZIZAO', topPage: 'tools' },
-            'xingjinzi': { url: 'https://www.zizao.top/pages/toolbox/index.html#xingjinzi', title: '形近字查询工具 - 字造ZIZAO', topPage: 'tools' },
-            'shufafengge': { url: 'https://www.zizao.top/pages/toolbox/index.html#shufafengge', title: '书法风格查询工具 - 字造ZIZAO', topPage: 'tools' },
+            'txt': { url: 'https://www.zizao.top/pages/toolbox/#txt', title: '在线TXT文本编辑器 - 字造ZIZAO', topPage: 'tools' },
+            'quchong': { url: 'https://www.zizao.top/pages/toolbox/#quchong', title: '文本字符去重工具 - 字造ZIZAO', topPage: 'tools' },
+            'duibi': { url: 'https://www.zizao.top/pages/toolbox/#duibi', title: '文字字符对比工具 - 字造ZIZAO', topPage: 'tools' },
+            'pinyin': { url: 'https://www.zizao.top/pages/toolbox/#pinyin', title: '汉字拼音转换工具 - 字造ZIZAO', topPage: 'tools' },
+            'xinjinzi': { url: 'https://www.zizao.top/pages/toolbox/#xinjinzi', title: '形近字查询工具 - 字造ZIZAO', topPage: 'tools' },
+            'shufa': { url: 'https://www.zizao.top/pages/toolbox/#shufa', title: '书法风格查询工具 - 字造ZIZAO', topPage: 'tools' },
             'iconfont': { url: 'https://www.zizao.top/pages/toolbox', title: '字造工具箱纯享版', type: 'zao', topPage: 'zao' }
         };
 
